kubernetes-itests/src/test/resources/route-it.yml
#
# Copyright (C) 2015 Red Hat, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#         http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route-get
spec:
  host: www.example.com
  to:
    kind: Service
    name: service-name
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route-list
spec:
  host: www.example.com
  to:
    kind: Service
    name: service-name
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route-update
spec:
  host: www.example.com
  to:
    kind: Service
    name: service-name
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route-delete
spec:
  host: www.example.com
  to:
    kind: Service
    name: service-name
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route-createorreplace
spec:
  host: www.example.com
  to:
    kind: Service
    name: service-name
